--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Notes App With Jetpack compose</string>
+    <string name="app_name">My Notes</string>
 </resources>
