custom Textfield added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="settingsLabel">Settings</string>
     <string name="yes">Yes</string>
     <string name="soon">Soon</string>
+    <string name="note_priority">Priority</string>
 </resources>
